Fix modules and imports
Also add `antfs-cli --help` to `script` in `.travis.yml` to verify that
antf-cli actually installs and runs correctly with TravisCI.

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ install:
   - pip install coveralls
 script:
   - coverage run --source=ant setup.py test
-  - python setup.py build
+  - python setup.py install
+  - antfs-cli --help
 after_success:
   - coveralls
