--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ install:
   - pip install -r requirements.txt
   - pip install coveralls
 script:
-  - coverage run --source=ant setup.py test
+  - coverage run --source=antfs_cli setup.py test
   - python setup.py install
   - antfs-cli --help
 after_success:
