--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,9 @@ python:
   - 3.4
   - 3.5
   - 3.6
-  - 3.5-dev # 3.5 development branch
-  - 3.6-dev # 3.6 development branch
-  - nightly # currently points to 3.7-dev
+  - 3.7
+  - 3.8
+  - nightly
   - pypy
 install:
   - pip install -r requirements.txt
@@ -19,6 +19,4 @@ after_success:
   - coveralls
 matrix:
   allow_failures:
-    - python: 3.5-dev
-    - python: 3.6-dev
     - python: nightly
